1.26.2:
  - add cloudify.nodes.resources.ModifiedIso to modify iso in place
1.26.1:
  - add new circleci context
  - py311 wagon
  - moved test to remote manager
1.26.0:
  - RND-555-deprecate-utils-types:
    - load_from_config relationship
    - cloudify.rest.BunchRequests node type
    - cloudify.rest.Requests node type
    - cloudify.terminal.raw node type
    - cloudify.keys.nodes.RSAKey node type
    - configuration_loader node type
1.25.17: Improve logging message.
1.25.16: CYBL-2002 - Add option to update secrets if they exist but not by default
1.25.15: CYBL-2016 Fix runtime_properties update at concurrent reservations.
1.25.14: RD-6414 Hide authorization in headers in rest plugin.
1.25.13:
  - CYBL-1875: Handle Parallel Reservations conflict.
  - CYBL-1872: Added force_remove flag to scaledownlist workflow.
  - CYBL-1871: Added rollback_on_failure flag to scalelist plugin.
  - CYBL-1870: Fixed rollback issue in scalelist plugin.
1.25.12: Allow kwargs override in custom workflow.
1.25.11: Do not log secrets by default.
1.25.10: Add plugin_1_4.yaml
1.25.9:
  - Add ignored instance states in scalelist.
  - Add availabilty states to workflows.
1.25.8: V2 Plugin YAML types.
1.25.7: 
  - RD-4587 Handle empty ssh secrets
  - Add reserve/return operations to cloudify.nodes.resources.List 
        (allow to use it in SharedResource with no relationship)
1.25.6: Make some changes to support 6.3 in batch deploy.
1.25.5: RD-3794-Copy File Method
1.25.4: CYBL-1207 Fix mode property in File plugin.
1.25.3: Rerelease for arm64 support.
1.25.2: RD-3143 Fix Scale down list.
1.25.1: RD-2954 Fix Cloud Init Encoding.
1.25.0:
    - RD-2928: Add batch install deploy workflows.
    - Added cloudify_resources plugin
1.24.4: Pin ruamel.yaml version to py2py3 compatible version and downgrade cryptography.
1.24.3: Change rollback workflow name to rollback_deprecated to avoid conflict with cloudify-common rollback workflow.
1.24.2: Decode bytes in ip list terminal plugin.