@@ -6,10 +6,8 @@ smmap==3.0.5
 cffi==1.14.5
 # cloudify-types
 git+https://github.com/cloudify-cosmo/cloudify-manager.git@6.3.1-build#egg=cloudify-types&subdirectory=cloudify_types
-
+git+https://github.com/cloudify-cosmo/cfy-lint.git@0.0.34-build
 # networkx
-ruamel.yaml<=0.15
 paramiko>=2.7.1
 cryptography==39.0.2
-ruamel.yaml.clib==0.2.7
 setuptools==59.6.0
