@@ -50,6 +50,5 @@ setup(
               'cloudify_resources'],
     license='LICENSE',
     install_requires=[
-        'cloudify-utilities-plugins-sdk>=0.0.124',
-        'ruamel.yaml']  # cloudinit
+        'cloudify-utilities-plugins-sdk>=0.0.124']
 )
